<resources>
    <string name="app_name">FDAClient</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email"> Email </string>
    <string name="noAccount">No account yet? Create one</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_error">Incorrect Login</string>
    <string name="signup_error">Email is already connected to an Account</string>
    <string name="name">Name</string>
    <string name="submit_button">Submit</string>
    <string name="noSurvey">No Surveys Available</string>
    <string name="Logout">Logout</string>
    <string name="applicationid">2C3OiQu0tqZjzKYrpgMxbhHOq4DeRQlgS9caXwa9</string>
    <string name="clientkey">wOhvxgZXjRBZvwBMHac51Xs3SGO1Q0yJfM4edszG</string>
</resources>
