<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text|textMultiLine|textUri" >
    </EditText>
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textMultiLine|textUri" >
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:onClick="addUrl"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/createUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="2dp"
        android:layout_marginLeft="100dp"
        android:text="@string/noAccount"
        android:clickable="true"/>
    <TextView
        android:id="@+id/wrongLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dip"/>

    </FrameLayout>

</LinearLayout>